Add Axios, user input, and clickable images.

--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
 REACT_APP_API_KEY=24d44fa3c7394fa5992cbe2423b96b66
+REACT_APP_EDAMAM_API_ID=54da5cd8
+REACT_APP_EDAMAM_API_KEY=bbffbdff84d54f5d53775ae6f855c30a
